# fastapi-shopify-starter

./: .exampleenv  .gitignore  Dockerfile  README.md  docker-compose.yml  pyclean.sh  pyproject.toml  run.sh  worker.sh
app/: __init__.py  alembic.ini  redis.py  session.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 34e33b2bd549_added_shop.py  5c92e09e509a_add_subscription_fields_to_store.py  8c12a2cf8824_added_charge_id_col.py  b57327a6a5b3_added_user.py  d74e8b155442_changed_charge_col_to_str.py  e4c1fedc77da_add_host_to_shop.py
app/api/v1/: api.py  gdpr.py  install.py  oauth.py  ping.py  store.py  user.py
app/dependencies/: auth.py  db.py
app/models/: database.py  shop.py  user.py
app/services/: base.py  nonce_service.py  shop_service.py  shopify_api_service.py  shopify_rest_service.py  shopify_service.py  shopify_token_service.py  user_service.py  verification.py
app/worker/: __init__.py  tasks.py
nginx/: default.conf
tests/: conftest.py  factories.py  helpers.py
tests/api/v1/: test_install.py  test_ping.py  test_store.py  test_user.py
tests/dependencies/: test_auth.py
tests/services/: test_nonce_service.py  test_shop_service.py  test_verification_service.py
ui/: Dockerfile  package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/: index.tsx
ui/src/components/AppFrame/: AppFrame.tsx
ui/src/hooks/: useApi.ts
ui/src/pages/: AccountPage.tsx  HomePage.tsx  index.tsx
ui/src/routing/: Routing.tsx
ui/src/services/: appBridge.ts  index.ts
ui/src/translations/: en.json  es.json  fr.json
ui/src/types/: enums.ts
(+5 files in other folders)
