[tool.poetry]
name = "shopify-starter"
version = "0.1.0"
description = ""
authors = ["Alistair Stark <astark@spiria.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
psycopg2 = "^2.9.3"
black = "^21.12b0"
isort = "^5.10.1"
celery = "^5.2.3"
redis = "^4.1.0"
aioredis = "^2.0.1"
pytest-asyncio = "^0.16.0"
asyncio = "^3.4.3"
asyncpg = "^0.25.0"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
